Fix bug in the filter dropdown content z-index

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -154,7 +154,6 @@ footer a:hover {
 
 .card-body {
     position: relative;
-    z-index: 1;
 }
 
 /* Hide filter options dropdowns initially */
